apps/services/operations/ntfy/manifests/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy-public
  namespace: operations
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ntfy.starktastic.net`)
      kind: Rule
      services:
        - name: ntfy-main
          port: 80
      middlewares:
        - name: rate-limit-strong
          namespace: traefik-system
  tls:
    secretName: {}
